<resources>
    <string name="app_name">Jonqko</string>
    <string name="button_slider1">next</string>
    <string name="button_slider2">skip</string>
    <string name="menu_srch">search</string>
    <string name="menu_cart">cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Menu String-->
    <string name="home">Home</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="list">List</string>
    <string name="transaksi">Transaksi</string>
    <string name="profil">Profil</string>
    <string name="slider1">Slider 1</string>

    <!--Fragment-->
    <string name="ini_list_fragment">Ini List Fragment</string>
    <string name="ini_notif_fragment">Ini Notif Fragment</string>
    <string name="ini_transaksi_fragment">Ini Transaksi Fragment</string>
    <string name="ini_profil_fragment">Ini Profil Fragment</string>
    <!--Properties-->
    <string name="logo">Logo</string>
    <string name="kacapiring_bandung">Kacapiring, Bandung</string>
    <string name="ganti_alamat">Ganti Alamat</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
