<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_menu_notif"
        android:title="@string/notifikasi"/>

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/list"
        app:showAsAction=""/>
    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_menu_transaction"
        android:title="@string/transaksi"
        app:showAsAction=""/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/profil"
        app:showAsAction=""/>

</menu>
