<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ptk111.com.jonqko.MainActivity">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_home"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbarHome">

        </android.support.v4.view.ViewPager>

        <android.support.v7.widget.Toolbar
            app:layout_scrollFlags="scroll|enterAlways"
            android:id="@+id/toolbarHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/logoJonqko"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/logojonqko"
                android:contentDescription="@string/logo">

            </ImageView>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/layoutDotsHome"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/view_pager_home"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alamatLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/view_pager_home"
            android:orientation="horizontal"
            android:weightSum="9">

            <TextView
                android:id="@+id/textviewAlamat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="8"
                android:gravity="center|start|left"
                android:text="@string/kacapiring_bandung"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#6B6867">

            </TextView>

            <Button
                android:id="@+id/buttonGantiAlamat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/gantialamat"
                android:drawableStart="@drawable/gantialamat"
                android:foregroundGravity="center|right"
                android:text="@string/ganti_alamat"
                android:textAllCaps="false"
                android:textColor="@color/colorStatusBar"
                android:textSize="13sp">

            </Button>

        </LinearLayout>

        <View
            android:id="@+id/lokasiLayoutDivader"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/alamatLayout"
            android:background="@color/colorLine" />

        <LinearLayout
            android:id="@+id/highlightLayout"
            android:layout_below="@+id/lokasiLayoutDivader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:weightSum="2">
            <LinearLayout
                android:id="@+id/highlightLayoutAtas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beras Putih Pasar Rebo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp7.500/Kg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beras Putih Pasar Rebo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp7.500/Kg"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/highlightLayoutBawah"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beras Putih Pasar Rebo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp7.500/Kg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beras Putih Pasar Rebo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp7.500/Kg"/>
            </LinearLayout>
        </LinearLayout>



        <View
            android:id="@+id/highlightLayoutDivader"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/highlightLayout"
            android:background="@color/colorLine" />

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/grouptabHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/highlightLayoutDivader"
            android:weightSum="8">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorStatusBar"
                app:tabSelectedTextColor="@color/colorStatusBar"
                app:tabTextColor="@color/colorStatusBar"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed">

            </android.support.design.widget.TabLayout>
        </LinearLayout>

        <View
            android:id="@+id/tablayoutDivader"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/grouptabHome"
            android:background="@color/colorLine" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tablayoutDivader"
            android:weightSum="8"
            android:baselineAligned="false">
            <android.support.v4.view.ViewPager
                android:layout_below="@+id/tablayoutDivader"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="300dp">
            </android.support.v4.view.ViewPager>
        </LinearLayout>


    </RelativeLayout>

</ScrollView>
